--- a/templates/map.html
+++ b/templates/map.html
@@ -32,6 +32,18 @@
 
 		<link rel="stylesheet" href="static/dist/css/app.min.css">
 		<script src="static/js/vendor/modernizr.custom.js"></script>
+		<script src="//vk.com/js/api/xd_connection.js?2" type="text/javascript"></script>
+		<script type="text/javascript">
+			VK.init(function(){
+				VK.api("groups.isMember", {"test_mode": 1, "group_id": 125106956}, function(result){
+					if (result) {
+						window.location.href = '/install';
+					}
+				});
+			}, function(){
+				alert('Ошибка загрузки VK API');
+			});
+		</script>
 	</head>
 	<body id="top">
 
