--- a/templates/map.html
+++ b/templates/map.html
@@ -36,7 +36,7 @@
 		<script type="text/javascript">
 			VK.init(function(){
 				VK.api("groups.isMember", {"test_mode": 1, "group_id": 125106956}, function(result){
-					if (result) {
+					if (!result) {
 						window.location.href = '/install';
 					}
 				});
